name:                ambiata-hydrant
version:             0.1.0.0
synopsis:            Simple HTML combinators
license:             BSD3
author:              Ambiata
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
                     base             >= 3      && < 5
                   , bytestring       >= 0.10.4 && < 0.11
                   , text             == 1.2.*

  default-language:
                     Haskell2010

  ghc-options:
                     -Wall -O2

  hs-source-dirs:
                     src

  exposed-modules:
                     Hydrant
                     Hydrant.Data
                     Hydrant.Raw

test-suite test
  type:
                     exitcode-stdio-1.0

  main-is:
                     test.hs

  hs-source-dirs:
                     test

  default-language:
                     Haskell2010

  build-depends:
                     base
                   , ambiata-disorder-core
                   , ambiata-disorder-corpus
                   , ambiata-disorder-jack
                   , ambiata-p
                   , ambiata-hydrant
                   , containers                == 0.5.*
                   , QuickCheck                >= 2.8.2 && < 2.9
                   , quickcheck-instances      == 0.3.*
                   , tagsoup                   == 0.14.*
                   , text                      == 1.2.*

benchmark bench
  type:
                     exitcode-stdio-1.0

  main-is:
                     bench.hs

  default-language:
                     Haskell2010

  ghc-options:
                     -Wall -threaded -O2

  hs-source-dirs:
                     test

  build-depends:
                     base
                   , ambiata-hydrant
                   , ambiata-p
                   , criterion                 == 1.1.*
                   , text                      == 1.2.*
                   , lucid
                   , blaze-html
                   , blaze-markup
